# vabamorf

./: .gitignore  CMakeLists.txt  README.md
data/: generate_disamb.sh  generate_morph.sh  generate_ok.sh  run.sh
doc/: test.json
java/src/: CMakeLists.txt  JVabamorf.java  LinguisticException.java
java/src/ee/risk/vabamorf/: DisambiguatorException.java  JVabamorf.java  LinguisticException.java
java/src/ee/risk/vabamorf/model/: MorphInfo.java  Sentence.java  Word.java
src/etana/: CMakeLists.txt  cyybs.cpp  find_fd.cpp  kchk1.cpp  kchk30.cpp  kjuhtum.cpp  mrf-gen.cpp  open_d2.cpp  post-fsc.h  sobivus.cpp  strcnv.cpp  tloendid.h  tmplptrarrayblabla.h
src/etsyn/: CMakeLists.txt
src/etyhh/: CMakeLists.txt  dctmetainf.h  et3myh.cpp  etmrfyhh.h  t3common.h  t3lex.h
src/fsc/: CMakeLists.txt  fscinit.cpp  fsmemory.cpp  fsstream.h  fsstring.h  stdfsc.h
src/fsc/fsjni/: fsjni.h
src/jni/: ArrayList.cpp  ArrayList.h  CMakeLists.txt  JNIException.cpp  JNIException.h  JVabamorf.cpp  MorphInfo.cpp  MorphInfo.h  Sentence.cpp  Sentence.h  String.cpp  String.h  Word.cpp  Word.h
src/json/: CMakeLists.txt  json.cpp  json.h
src/lex/conv11x/: CMakeLists.txt  dctcnv11.cpp
src/lex/conv4/: CMakeLists.txt  dctcnv4.cpp
src/lex/init3/: CMakeLists.txt  cxxget2.cpp  cxxinit3.cpp  estmorf.h  init.h  init3.cpp  init_end.cpp  init_gr.cpp  init_suf.cpp  test.cpp  wfi.cpp
src/lex/noom/: CMakeLists.txt  lihtlisa.cpp  nomerand.cpp  nomnul.cpp  noomen.cpp  par1-10.cpp  par11-20.cpp  par21-26.cpp  parpar.cpp  tee_para.cpp  ykssilp.cpp
src/lex/palakuju/: CMakeLists.txt  dctcnvpala.cpp
src/lex/t3mesta/: CMakeLists.txt  main-krida.cpp  main-krida.h  t3lexpre.cpp  t3main.cpp  t3main.h  t3mitmesus.cpp  t3tabelpre.cpp  t3tagspre.cpp
src/lex/t3pakitud/: CMakeLists.txt  t3_pakitud.h
src/lex/verb/: CMakeLists.txt  kogupara.cpp  par27-38.cpp  verb.cpp  verbera.cpp  vparpar.cpp  vteepar.cpp
src/main/: CMakeLists.txt  speller.cpp  speller.h
src/nomvrb/: CMakeLists.txt  era_ind.cpp  era_tyvi.cpp  lgr.cpp  lyli.cpp  noomen.h
src/proof/: CMakeLists.txt  disambiguator.cpp  disambiguator.h  linguistic.cpp  linguistic.h  proof.h
src/vabamorf/: etana.cpp  etdisamb.cpp  etsyn.cpp  stlspeller.cpp
