cmake_minimum_required(VERSION 3.3)
project(vabamorf)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DUNIX")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_BUILD_TYPE Debug)

add_subdirectory(src/main)

add_subdirectory(src/etsyn)
add_subdirectory(src/etana)
add_subdirectory(src/etyhh)
add_subdirectory(src/fsc)
add_subdirectory(src/proof)
add_subdirectory(src/nomvrb)
add_subdirectory(src/json)

add_subdirectory(src/lex/conv4)
add_subdirectory(src/lex/conv11x)
add_subdirectory(src/lex/init3)
add_subdirectory(src/lex/noom)
add_subdirectory(src/lex/palakuju)
add_subdirectory(src/lex/t3mesta)
add_subdirectory(src/lex/t3pakitud)
add_subdirectory(src/lex/verb)
add_subdirectory(java/src)
add_subdirectory(src/jni)
