set(MODULE_NAME ${PROJECT_NAME}-etana)

set(SOURCE_FILES
	adhoc.cpp
	adhoc.h
	ahel2.h
	arva_av.cpp
	arva.h
	arvahy1.cpp
	arvai.cpp
	arvalyh1.cpp
	arvalyh2.cpp
	arvamitte.cpp
	arvans1.cpp
	arvans2.cpp
	arvapn1.cpp
	arvapn2.cpp
	arvash1.cpp
	arvasuf1.cpp
	arvavi1.cpp
	arvax.cpp
	bins.cpp
	bsearch.cpp
	chkgeon.cpp
	chkhy1.cpp
	chkhy2.cpp
	chklyh0.cpp
	chklyh1.cpp
	chklyh2.cpp
	chklyh3.cpp
	chklyh4.cpp
	chkmin.cpp
	chkmitte.cpp
	chknr2.cpp
	chkoleta.cpp
	chkvaljend.cpp
	chkx.cpp
	close_d.cpp
	cmorf.cpp
	cmorf.h
	ctulem.h
	cxxbs3.h
	cxxcash.cpp
	cxxcash.h
	cxxraam.cpp
	cyybs.cpp
	echopath.cpp
	etmrfa.cpp
	etmrfana.h
	etmrf.h
	etmrfverstr.cpp
	etmrfverstr.h
	find_fd.cpp
	f-info.h
	fsxstring.h
	hjk_cxx.cpp
	ini_mrf.h
	kchk1.cpp
	kchk2.cpp
	kchk30.cpp
	kchk33.cpp
	kchk4.cpp
	kchk5.cpp
	kchk6.cpp
	kjuhtum.cpp
	komp.cpp
	kr6nksud1.cpp
	kr6nksud.h
	lib_amor32_macprefix.h
	loefailist.cpp
	loefailist.h
	mittesona.cpp
	mittesona.h
	mrf2yh2mrf.cpp
	mrf2yh2mrf.h
	mrf-gen.cpp
	mrflags.h
	mrf-mrf.h
	open_d1.cpp
	open_d2.cpp
	open_dm.cpp
	pfscodepage.h
	post-fsc.h
	readeel.cpp
	readends.cpp
	readfgrs.cpp
	readfms.cpp
	readgrs.cpp
	readloe.cpp
	readprf.cpp
	readsuf.cpp
	result.h
	rfi.cpp
	rooma.cpp
	rooma.h
	s6n0.h
	silp.cpp
	silp.h
	sloendid.cpp
	sloendid.h
	sobivus.cpp
	sonatk.h
	strcnv.cpp
	strtosi.cpp
	suurused.h
	tloendid.cpp
	tloendid.h
	tmk2t.cpp
	tmk2t.h
	tmk2tx.cpp
	tmk2tx.h
	tmplarray.h
	tmplptrarrayblabla.h
	tmplptrsrtfnd.h
	tulem.h
	ty_lp.cpp
	tyybid.h
	valjatr.cpp
	viga.h
)

add_library(${MODULE_NAME} ${SOURCE_FILES})
